Correct the noise explanation of Problem 6

--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -1275,7 +1275,7 @@
     "In Problem 5, we fit the gain $g_j$ and total read noise $σ_{j,read}^2$ using the linear noise model: \n",
     "<h2><center>$\\tilde{σ}^2_{j}(x,y)= μ(x,y) \\cdot g_j + \\delta_j$    (5)</center></h2>\n",
     "\n",
-    "But note that for the dark image dataset, there is no signal so that $μ(x,y)=0$ and $\\tilde{σ}^2_{j}(x,y) = \\delta_j$, which is to say that we measure the read noise variance directly. Also, recall here that the total read noise consisted of both a gain-dependent dark noise $\\sigma^2_{dark}$ and a gain independent ADC noise $\\sigma^2_{ADC}$\n",
+    "But note that for the dark image dataset, there is no signal so that $μ(x,y)=0$ and $\\tilde{σ}^2_{j}(x,y) = \\delta_j$, which is to say that we measure the read noise variance directly. Also, recall here that the total signal independent noise $\\delta_j$ consisted of both the gain-dependent read noise $\\sigma^2_{read}$ and the gain-independent ADC noise $\\sigma^2_{ADC}$.\n",
     "\n",
     "<h2><center>$\\delta_j = σ_{read}^2 \\cdot g_j^2 + σ_{ADC}^2$    (6)</center></h2>\n",
     "\n",
