Minor shape change correction for last part

--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -1667,7 +1667,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(noisy_star_ims.shape) # should be (200,300,3,20,6)\n",
+    "print(noisy_star_ims.shape) # should be (456, 590, 3, 20, 6)\n",
     "\n",
     "image_number = 0;\n",
     "plots.plot_images(noisy_star_ims[:,:,:,image_number,:],sensitivity, \"Captured\",0)\n",
